<resources>
    <string name="app_name">L02-PS</string>

    <string name="submit">Submit</string>
    <string name="hello">Hello</string>
    <string name="add">Add</string>
    <string name="email_faci">Email Faci</string>
    <string name="info">Info</string>
    <string name="week">Week</string>
    <string name="x">X</string>
    <string name="f">F</string>
    <string name="d">D</string>
    <string name="c">C</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="dg">DG</string>
    <string name="c000">C000</string>
</resources>